best_try_and_best_chance

--- a/html/database/1-sqlserver.html
+++ b/html/database/1-sqlserver.html
@@ -22,24 +22,27 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgc33de15">1. LocalDB</a></li>
+<li><a href="#org25b7ad0">1. 版本</a></li>
+<li><a href="#orgc33de15">2. LocalDB</a></li>
 </ul>
 </div>
 </nav>
 
 
-<section id="outline-container-orgc33de15" class="outline-2">
-<h2 id="orgc33de15"><span class="section-number-2">1.</span> LocalDB</h2>
+<section id="outline-container-org25b7ad0" class="outline-2">
+<h2 id="org25b7ad0"><span class="section-number-2">1.</span> 版本</h2>
 <div class="outline-text-2" id="text-1">
-<p>
-版本:
-</p>
 <ul class="org-ul">
 <li>SQLServer</li>
 <li>SQLServer Express (免费版本，对资源使用有很多限制)</li>
 <li>SQLServer Express LocalDB (本地数据库，没有多用户和网络连接功能)</li>
 </ul>
+</div>
+</section>
 
+<section id="outline-container-orgc33de15" class="outline-2">
+<h2 id="orgc33de15"><span class="section-number-2">2.</span> LocalDB</h2>
+<div class="outline-text-2" id="text-2">
 <p>
 可以使用 <code>sqllocaldb</code> 命令对 LocalDB 进行管理:
 </p>
