best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -42,9 +42,8 @@
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
 <ul class="org-ul">
-<li>概念总结: MVC vs 三层架构</li>
-<li>了解什么是 CSRF 攻击</li>
-<li>熟悉 MVC 中 CRUD 的基本流程</li>
+<li>先模仿后超越: <a href="https://learn.microsoft.com/zh-cn/aspnet/mvc/overview/getting-started/introduction/getting-started">ASP.NET 入门项目</a>，认真敲认真练</li>
+<li>了解什么是 XSS 攻击，如何防范</li>
 <li>预习: MVC 的生命周期</li>
 </ul>
 
