best_try_and_best_chance

--- a/html/111/tasks.html
+++ b/html/111/tasks.html
@@ -46,7 +46,7 @@
 <h2 id="active"><span class="section-number-2">1.</span> <span class="timestamp-wrapper"><span class="timestamp">[2022-10-12 Wed]</span></span></h2>
 <div class="outline-text-2" id="text-active">
 <ul class="org-ul">
-<li>先模仿后超越: <a href="https://learn.microsoft.com/zh-cn/aspnet/mvc/overview/getting-started/introduction/getting-started">ASP.NET 入门项目</a>，认真敲认真练</li>
+<li>先模仿后超越: <a href="https://learn.microsoft.com/zh-cn/aspnet/mvc/overview/getting-started/introduction/getting-started">ASP.NET 入门项目</a>，认真敲认真练!</li>
 <li>了解什么是 XSS 攻击，如何防范</li>
 <li>预习: MVC 的生命周期</li>
 </ul>
