best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,7 @@
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
 <ul class="org-ul">
-<li>先模仿后超越: <a href="https://learn.microsoft.com/zh-cn/aspnet/mvc/overview/getting-started/introduction/getting-started">ASP.NET 入门项目</a>, <b>认真敲认真练</b>!</li>
+<li>先模仿后超越:  <a href="https://learn.microsoft.com/zh-cn/aspnet/mvc/overview/getting-started/introduction/getting-started">ASP.NET 入门项目</a>, <b>认真敲认真练</b>, 记得要整理笔记!</li>
 <li>了解什么是 XSS 攻击，如何防范</li>
 <li>预习: MVC 的生命周期</li>
 </ul>
