best_try_and_best_chance

--- a/html/.sitemap.html
+++ b/html/.sitemap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-12 -->
+<!-- 2022-10-13 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sitemap for project _notes_yao63</title>
@@ -35,6 +35,7 @@
 <li><a href="dotnet/0-csharp.html">C♯</a></li>
 <li><a href="dotnet/4-winform.html">Winform</a></li>
 <li><a href="dotnet/5-aspnet.html">ASP.NET</a></li>
+<li><a href="dotnet/7-ef.html">Entity Framework</a></li>
 </ul></li>
 <li>frontend
 <ul class="org-ul">
@@ -52,7 +53,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-12</p>
+<p class="date">Created: 2022-10-13</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
