--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-12 -->
+<!-- 2022-10-13 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>173.NET</title>
@@ -42,9 +42,11 @@
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
 <ul class="org-ul">
-<li>先模仿后超越:  <a href="https://learn.microsoft.com/zh-cn/aspnet/mvc/overview/getting-started/introduction/getting-started">ASP.NET 入门项目</a>, <b>认真敲认真练</b>, 记得要整理笔记!</li>
-<li>了解什么是 XSS 攻击，如何防范</li>
-<li>预习: MVC 的生命周期</li>
+<li><b>将 <a href="https://learn.microsoft.com/zh-cn/aspnet/mvc/overview/getting-started/introduction/getting-started">ASP.NET 入门项目</a> 吃透、敲熟</b></li>
+<li>学会使用 SqlServer Express LocalDB 进行开发</li>
+<li>掌握 EF 中模型与数据库之间的 Migration 命令</li>
+<li>了解 Model 验证的基本流程，掌握常用的内置 ValidationAttribue，会自定义 ValidationAttribute</li>
+<li>总结 MVC 中进行表单验证的其他方法</li>
 </ul>
 
 <div><br>
@@ -61,6 +63,7 @@
 <li><a href="dotnet/0-csharp.html">C♯</a></li>
 <li><a href="dotnet/4-winform.html">Winform</a></li>
 <li><a href="dotnet/5-aspnet.html">ASP.NET</a></li>
+<li><a href="dotnet/7-ef.html">Entity Framework</a></li>
 </ul></li>
 <li>frontend
 <ul class="org-ul">
@@ -150,7 +153,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-12</p>
+<p class="date">Created: 2022-10-13</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
