--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-11 -->
+<!-- 2022-10-14 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>ASP.NET</title>
@@ -48,7 +48,16 @@
 </li>
 </ul>
 </li>
-<li><a href="#org1a00f89">5. ASP.NET MVC</a></li>
+<li><a href="#org1a00f89">5. ASP.NET MVC</a>
+<ul>
+<li><a href="#org3fb2074">5.1. MVC</a></li>
+<li><a href="#org25d2ae8">5.2. Lifecycle</a></li>
+<li><a href="#org7a3bf3e">5.3. Action</a></li>
+<li><a href="#org18aec65">5.4. Razor</a></li>
+<li><a href="#orgd0cb094">5.5. Binding/Validation</a></li>
+<li><a href="#orgcc90b03">5.6. Filter</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </nav>
@@ -402,7 +411,7 @@ Global.asax:
 <h3 id="orgcfd4161"><span class="section-number-3">4.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="org29531de">
+<figure id="orgaa38292">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -592,7 +601,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orgfa49765">
+<pre class="example" id="org1e84702">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -649,7 +658,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orgcd41d1c">
+<pre class="example" id="org62ad736">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -944,6 +953,13 @@ RouteTable.Routes.<span style="color: #721045;">EnableFriendlyUrls</span><span s
 <section id="outline-container-org1a00f89" class="outline-2">
 <h2 id="org1a00f89"><span class="section-number-2">5.</span> ASP.NET MVC</h2>
 <div class="outline-text-2" id="text-5">
+</div>
+<div id="outline-container-org3fb2074" class="outline-3">
+<h3 id="org3fb2074"><span class="section-number-3">5.1.</span> MVC</h3>
+<div class="outline-text-3" id="text-5-1">
+<p>
+ASP.NET MVC:
+</p>
 <ul class="org-ul">
 <li>基于 MVC 概念:
 <ul class="org-ul">
@@ -954,12 +970,47 @@ RouteTable.Routes.<span style="color: #721045;">EnableFriendlyUrls</span><span s
 <li>使用 Razor 作为页面的模板引擎</li>
 <li>约定大于配置 (CoC) 的理念</li>
 </ul>
+
+<p>
+项目文件夹:
+</p>
+<ul class="org-ul">
+<li>Controller</li>
+<li>View</li>
+<li>Model</li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-org25d2ae8" class="outline-3">
+<h3 id="org25d2ae8"><span class="section-number-3">5.2.</span> Lifecycle</h3>
+<div class="outline-text-3" id="text-5-2">
+<p>
+<a href="https://www.cnblogs.com/PatrickLiu/p/15175388.html">https://www.cnblogs.com/PatrickLiu/p/15175388.html</a>
+</p>
+</div>
+</div>
+
+<div id="outline-container-org7a3bf3e" class="outline-3">
+<h3 id="org7a3bf3e"><span class="section-number-3">5.3.</span> Action</h3>
+</div>
+
+<div id="outline-container-org18aec65" class="outline-3">
+<h3 id="org18aec65"><span class="section-number-3">5.4.</span> Razor</h3>
+</div>
+
+<div id="outline-container-orgd0cb094" class="outline-3">
+<h3 id="orgd0cb094"><span class="section-number-3">5.5.</span> Binding/Validation</h3>
+</div>
+
+<div id="outline-container-orgcc90b03" class="outline-3">
+<h3 id="orgcc90b03"><span class="section-number-3">5.6.</span> Filter</h3>
 </div>
 </section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-11</p>
+<p class="date">Created: 2022-10-14</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
