best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -411,7 +411,7 @@ Global.asax:
 <h3 id="orgcfd4161"><span class="section-number-3">4.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="orgaa38292">
+<figure id="orge140592">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -601,7 +601,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org1e84702">
+<pre class="example" id="org741149a">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -658,7 +658,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org62ad736">
+<pre class="example" id="org8873aed">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -988,8 +988,15 @@ ASP.NET MVC:
 <p>
 <a href="https://www.cnblogs.com/PatrickLiu/p/15175388.html">https://www.cnblogs.com/PatrickLiu/p/15175388.html</a>
 </p>
+
+
+<figure id="orgcf9162a">
+<img src="img/mvc-lifecycle.png" alt="mvc-lifecycle.png">
+
+</figure>
 </div>
 </div>
+
 
 <div id="outline-container-org7a3bf3e" class="outline-3">
 <h3 id="org7a3bf3e"><span class="section-number-3">5.3.</span> Action</h3>
