--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -411,7 +411,7 @@ Global.asax:
 <h3 id="orgcfd4161"><span class="section-number-3">4.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="org6d54f87">
+<figure id="org0e756b4">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -601,7 +601,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org9427f6c">
+<pre class="example" id="orgc8e7126">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -658,7 +658,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org1ff3015">
+<pre class="example" id="org9a5e47e">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -986,13 +986,13 @@ ASP.NET MVC:
 <h3 id="org25d2ae8"><span class="section-number-3">5.2.</span> Lifecycle</h3>
 <div class="outline-text-3" id="text-5-2">
 
-<figure id="org69776c3">
+<figure id="org8ca9423">
 <img src="img/mvc-lifecycle.png" alt="mvc-lifecycle.png">
 
 </figure>
 
 <p>
-UrlRoutingModule (IHttpModule):
+首先，在 <code>UrlRoutingModule</code> 中获取路由数据，并找到要处理的 MvcHandler:
 </p>
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #505050;">// </span><span style="color: #505050;">&#36890;&#36807; RouteTable &#33719;&#21462;&#36335;&#30001;&#25968;&#25454;</span>
@@ -1005,7 +1005,7 @@ context.<span style="color: #721045;">RemapHandler</span><span style="color: #00
 </div>
 
 <p>
-MvcHandler (IHttpHandler):
+其次，在 <code>MvcHandler</code> 中，创建对应的 Controller 对象，并调用其 Execute 方法:
 </p>
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #505050;">// </span><span style="color: #505050;">&#21019;&#24314; Controller &#23545;&#35937;</span>
@@ -1016,7 +1016,7 @@ controller.<span style="color: #721045;">Execute</span><span style="color: #0000
 </div>
 
 <p>
-Controller.InvokeAction:
+然后，通过 <code>Controller.InvokeAction</code> 调用对应的 Action 方法:
 </p>
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #505050;">// </span><span style="color: #505050;">&#33719;&#21462; Action &#19978;&#25152;&#26377;&#36807;&#28388;&#22120;</span>
@@ -1044,7 +1044,7 @@ Controller.InvokeAction:
 </div>
 
 <p>
-IViewEngine/IView:
+最后，通过 ViewEngines 选择合适的 IViewEngine，并根据结果类型调用响应的 IView.Render 方法，完成渲染:
 </p>
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #2a486a;">/// &#21487;&#20197;&#23450;&#20041;&#24182;&#20351;&#29992;&#33258;&#24049;&#30340; ViewEngine</span>
