best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -411,7 +411,7 @@ Global.asax:
 <h3 id="orgcfd4161"><span class="section-number-3">4.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="org0e756b4">
+<figure id="org69efa00">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -601,7 +601,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orgc8e7126">
+<pre class="example" id="orgd377244">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -658,7 +658,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org9a5e47e">
+<pre class="example" id="orge446700">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -986,7 +986,7 @@ ASP.NET MVC:
 <h3 id="org25d2ae8"><span class="section-number-3">5.2.</span> Lifecycle</h3>
 <div class="outline-text-3" id="text-5-2">
 
-<figure id="org8ca9423">
+<figure id="orge7f1d37">
 <img src="img/mvc-lifecycle.png" alt="mvc-lifecycle.png">
 
 </figure>
@@ -1044,7 +1044,7 @@ controller.<span style="color: #721045;">Execute</span><span style="color: #0000
 </div>
 
 <p>
-最后，通过 ViewEngines 选择合适的 IViewEngine，并根据结果类型调用响应的 IView.Render 方法，完成渲染:
+最后，通过 ViewEngines 选择合适的 IViewEngine，并根据结果类型调用响应的 <code>IView.Render</code> 方法，完成渲染:
 </p>
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #2a486a;">/// &#21487;&#20197;&#23450;&#20041;&#24182;&#20351;&#29992;&#33258;&#24049;&#30340; ViewEngine</span>
