--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -411,7 +411,7 @@ Global.asax:
 <h3 id="orgcfd4161"><span class="section-number-3">4.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="org69efa00">
+<figure id="orge3487ea">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -601,7 +601,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orgd377244">
+<pre class="example" id="orgfb0d925">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -658,7 +658,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orge446700">
+<pre class="example" id="orgb600cd3">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -986,7 +986,7 @@ ASP.NET MVC:
 <h3 id="org25d2ae8"><span class="section-number-3">5.2.</span> Lifecycle</h3>
 <div class="outline-text-3" id="text-5-2">
 
-<figure id="orge7f1d37">
+<figure id="org86c0e06">
 <img src="img/mvc-lifecycle.png" alt="mvc-lifecycle.png">
 
 </figure>
@@ -1025,7 +1025,7 @@ controller.<span style="color: #721045;">Execute</span><span style="color: #0000
 <span style="color: #000000;">{</span>
     <span style="color: #505050;">// </span><span style="color: #505050;">&#25191;&#34892;&#20854;&#20013;&#30340; Authentication (&#35748;&#35777;) &#36807;&#28388;&#22120;</span>
     <span style="color: #005a5f;">AuthenticationContext</span> <span style="color: #00538b;">authenticationContext</span> = <span style="color: #5317ac;">this</span>.<span style="color: #721045;">InvokeAuthenticationFilters</span><span style="color: #a8007f;">(</span>controllerContext, filters.AuthenticationFilters, actionDescriptor<span style="color: #a8007f;">)</span>;
-    <span style="color: #505050;">// </span><span style="color: #505050;">&#25191;&#34892;&#20854;&#20013;&#30340; Authentization (&#25480;&#26435;) &#36807;&#28388;&#22120; </span>
+    <span style="color: #505050;">// </span><span style="color: #505050;">&#25191;&#34892;&#20854;&#20013;&#30340; Authorization (&#25480;&#26435;) &#36807;&#28388;&#22120; </span>
     <span style="color: #005a5f;">AuthorizationContext</span> <span style="color: #00538b;">authorizationContext</span> = <span style="color: #5317ac;">this</span>.<span style="color: #721045;">InvokeAuthorizationFilters</span><span style="color: #a8007f;">(</span>controllerContext, filters.AuthorizationFilters, actionDescriptor<span style="color: #a8007f;">)</span>;
     <span style="color: #505050;">// </span><span style="color: #505050;">&#33719;&#21462;&#24182;&#32465;&#23450;&#35831;&#27714;&#21442;&#25968;</span>
     <span style="color: #005a5f;">IDictionary</span><span style="color: #a8007f;">&lt;</span><span style="color: #005a5f;">string</span>, <span style="color: #005a5f;">object</span><span style="color: #a8007f;">&gt;</span> <span style="color: #00538b;">parameterValues</span> = <span style="color: #5317ac;">this</span>.<span style="color: #721045;">GetParameterValues</span><span style="color: #a8007f;">(</span>controllerContext, actionDescriptor<span style="color: #a8007f;">)</span>;
@@ -1079,6 +1079,17 @@ controller.<span style="color: #721045;">Execute</span><span style="color: #0000
 
 <div id="outline-container-orgcc90b03" class="outline-3">
 <h3 id="orgcc90b03"><span class="section-number-3">5.6.</span> Filter</h3>
+<div class="outline-text-3" id="text-5-6">
+<p>
+接口、方法:
+</p>
+<ul class="org-ul">
+<li>IAuthenticationFilter/IAuthorizationFilter (AuthorizeAttribute)</li>
+<li>IActionFilter (ActionFilterAttribute)</li>
+<li>IResultFilter (ActionFilterAttribute)</li>
+<li>IExceptionFilter (HandleErrorAttribute)</li>
+</ul>
+</div>
 </div>
 </section>
 </div>
