best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -41,12 +41,14 @@
 <section id="toc">
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
+<p>
+将【学生管理】的增删改查 (CRUD) 使用 MVC 进行实现并完善:
+</p>
 <ul class="org-ul">
-<li><b>将 <a href="https://learn.microsoft.com/zh-cn/aspnet/mvc/overview/getting-started/introduction/getting-started">ASP.NET 入门项目</a> 吃透、敲熟</b></li>
-<li>学会使用 SqlServer Express LocalDB 进行开发</li>
-<li>掌握 EF 中模型与数据库之间的 Migration 命令</li>
-<li>了解 Model 验证的基本流程，掌握常用的内置 ValidationAttribue，会自定义 ValidationAttribute</li>
-<li>总结 MVC 中进行表单验证的其他方法</li>
+<li>完成基本功能，优化页面显示</li>
+<li>在首页增加按名字/城市 <b>过滤</b> 的功能</li>
+<li>增加适当的输入验证</li>
+<li>增加登录功能，并为相关添加、修改、删除业务增加认证限制，即必须登录之后才能进行</li>
 </ul>
 
 <div><br>
