best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-14 -->
+<!-- 2022-10-17 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>173.NET</title>
@@ -41,14 +41,10 @@
 <section id="toc">
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
-<p>
-将【学生管理】的增删改查 (CRUD) 使用 MVC 进行实现并完善:
-</p>
 <ul class="org-ul">
-<li>完成基本功能，优化页面显示</li>
-<li>在首页增加按名字/城市 <b>过滤</b> 的功能</li>
-<li>增加适当的输入验证</li>
-<li>增加登录功能，并为相关添加、修改、删除业务增加认证限制，即必须登录之后才能进行</li>
+<li>IEnumerable/foreach 可迭代对象</li>
+<li>请告诉我这两个概念的区别: override/overload, 重写 vs 重载</li>
+<li>泛型</li>
 </ul>
 
 <div><br>
@@ -155,7 +151,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-14</p>
+<p class="date">Created: 2022-10-17</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
