--- a/html/index.html
+++ b/html/index.html
@@ -44,6 +44,7 @@
 <ul class="org-ul">
 <li>总结: 栈 vs 堆</li>
 <li>总结: String vs StringBuilder</li>
+<li>总结: Array vs List</li>
 </ul>
 
 <div class="org-src-container">
