--- a/html/miscellaneous/english.html
+++ b/html/miscellaneous/english.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-12 -->
+<!-- 2022-10-20 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>English</title>
@@ -48,6 +48,7 @@
 <li>master/slaver: 主人/奴隶</li>
 <li>Transfer: 转移</li>
 <li>Genre: 类型</li>
+<li>Gender: 性别</li>
 </ul>
 </div>
 </section>
@@ -68,7 +69,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-12</p>
+<p class="date">Created: 2022-10-20</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
