best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -47,6 +47,9 @@
 <li>总结: Array vs List</li>
 </ul>
 
+<p>
+对象在内存中的表现形式是怎样的?
+</p>
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #5317ac;">class</span> <span style="color: #005a5f;">Student</span>
 <span style="color: #000000;">{</span>
@@ -81,6 +84,9 @@ students<span style="color: #000000;">[</span>1<span style="color: #000000;">]</
 </pre>
 </div>
 
+<p>
+为什么不建议使用 += 进行字符串的拼接?
+</p>
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #505050;">// </span><span style="color: #505050;">1</span>
 <span style="color: #005a5f;">string</span> <span style="color: #00538b;">html</span> = <span style="color: #2544bb;">"&lt;p&gt;"</span>;
