best_try_and_best_chance

--- a/html/111/tasks.html
+++ b/html/111/tasks.html
@@ -121,6 +121,17 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span>sb.<span style="color: #721045;">ToString</span><span style="color: #a8007f;">()</span><span style="color: #000000;">)</span>;
 </pre>
 </div>
+
+<div class="org-src-container">
+<pre class="src src-csharp"><span style="color: #505050;">// </span><span style="color: #505050;">&#23481;&#22120;: &#31867;&#22411;&#19968;&#33268;; &#31354;&#38388;&#21344;&#29992;&#8220;&#22266;&#23450;&#8221;; &#31354;&#38388;&#36830;&#32493;</span>
+<span style="color: #005a5f;">int</span><span style="color: #000000;">[]</span> <span style="color: #00538b;">ages</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">int</span><span style="color: #000000;">[</span>3<span style="color: #000000;">]</span>;
+ages<span style="color: #000000;">[</span>2<span style="color: #000000;">]</span> = 3;
+<span style="color: #005a5f;">int</span><span style="color: #000000;">[]</span> <span style="color: #00538b;">ages</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">int</span><span style="color: #000000;">[]</span> <span style="color: #000000;">{</span> 3, 4, 5 <span style="color: #000000;">}</span>;
+
+<span style="color: #005a5f;">string</span><span style="color: #000000;">[]</span> <span style="color: #00538b;">names</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">string</span><span style="color: #000000;">[</span>3<span style="color: #000000;">]</span>;
+<span style="color: #005a5f;">Student</span><span style="color: #000000;">[]</span> <span style="color: #00538b;">students</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Student</span><span style="color: #000000;">[</span>3<span style="color: #000000;">]</span>;
+</pre>
+</div>
 </div>
 </section>
 
