best_try_and_best_chance

--- a/html/111/tasks.html
+++ b/html/111/tasks.html
@@ -122,6 +122,9 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </pre>
 </div>
 
+<p>
+List, 自动扩容的数组:
+</p>
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #505050;">// </span><span style="color: #505050;">&#23481;&#22120;: &#31867;&#22411;&#19968;&#33268;; &#31354;&#38388;&#21344;&#29992;&#8220;&#22266;&#23450;&#8221;; &#31354;&#38388;&#36830;&#32493;</span>
 <span style="color: #005a5f;">int</span><span style="color: #000000;">[]</span> <span style="color: #00538b;">ages</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">int</span><span style="color: #000000;">[</span>3<span style="color: #000000;">]</span>;
